sumo/tests/sumo/output/meandata_lanebased/errors/missing_begin_divider/errors.sumo
Error: The description of the meandata_lane 'dump_15' does not contain a needed value.
Quitting (on error).
